# snaphot_decorator

./: .gitignore  README.md  pyproject.toml
snapshot_deco/: deco.py  snaphot_timer.py
